fix(style): z-indexの変数管理化、headerの初期位値をabsoluteで固定

--- a/src/app/component/header/header.module.css
+++ b/src/app/component/header/header.module.css
@@ -1,6 +1,11 @@
 .header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: var(--size-header-height);
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: var(--z-index-header);
 }
